# vecboost

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  AUTH_FEATURE_REPORT.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  README.md  README_EN.md  README_zh.md  TEST_MODES.md  USER_GUIDE.md  build.rs  config.example.toml  config.toml  config_full.toml  config_minimal.toml  test_gpu_candle.rs
.github/workflows/: docker.yml  feature-matrix.yml  health-check.yml  release.yml
deployments/: alerts.yml  grafana-dashboard.json  prometheus.yml
deployments/kubernetes/: README.md  SCALING_BEST_PRACTICES.md  configmap.yaml  deployment.yaml  gpu-deployment.yaml  hpa.yaml  model-cache.yaml  service.yaml
docs/: API_REFERENCE.md  API_REFERENCE_zh.md  ARCHITECTURE.md  ARCHITECTURE_zh.md  CONTRIBUTING.md  DEPLOYMENT_GUIDE.md  FAQ.md  USER_GUIDE_zh.md  prd.md  tdd.md  test.md  uat.md
examples/: Cargo.toml  README.md  download_model.rs  gpu_test.rs  gpu_test_onnx.rs  pytorch_gpu_test.rs  simple_gpu_test.rs
examples/auth/: README.md  csrf.rs  jwt_auth.rs  refresh.rs
examples/basic/: README.md  batch.rs  embed.rs  similarity.rs
examples/cache/: README.md  cache_config.rs  ttl.rs
examples/cli/: README.md  batch_cli.rs  embed_cli.rs
examples/engine/: README.md  candle.rs  onnx.rs  switch.rs
examples/gpu/: basic_device_test.rs  candle_engine_test.rs  onnx_engine_test.rs  performance_comparison.rs
examples/gpu/utils/: device.rs  mod.rs  models.rs  testing.rs
examples/grpc/: README.md  grpc_client.rs
examples/http/: README.md  batch_api.rs  embed_api.rs  similarity_api.rs
examples/monitoring/: README.md  metrics.rs  performance.rs
examples/pipeline/: README.md  priority_queue.rs  workers.rs
examples/rate-limiting/: README.md  multi_dimension.rs  rate_limit.rs
openspec/: project.md
openspec/changes/add-amd-intel-gpu-support/: design.md  proposal.md  tasks.md
openspec/changes/add-amd-intel-gpu-support/specs/: INDEX.md
openspec/changes/add-amd-intel-gpu-support/specs/amd-gpu/: spec.md
openspec/changes/add-amd-intel-gpu-support/specs/intel-gpu/: spec.md
openspec/changes/add-amd-intel-gpu-support/specs/unified-device/: spec.md
openspec/changes/fix-errors-optimize-performance/: proposal.md  tasks.md
openspec/changes/fix-errors-optimize-performance/specs/: INDEX.md
openspec/changes/fix-errors-optimize-performance/specs/code-quality/: spec.md
openspec/changes/fix-errors-optimize-performance/specs/error-handling/: spec.md
openspec/changes/fix-errors-optimize-performance/specs/performance/: spec.md
openspec/changes/security-hardening-v1/: design.md  proposal.md  tasks.md
openspec/changes/security-hardening-v1/specs/security/: spec.md
proto/: embedding.proto
scripts/: archive.sh  archive_change.sh  check_copyright.sh  common.sh  convert_model_to_onnx.py  convert_pytorch_to_safetensors.py  convert_to_safetensors.py  convert_to_safetensors.sh  deploy_and_monitor.sh  install-pre-commit.sh  merge_delta_spec.py  pre-commit-check.sh  pre-commit.sh  switch-to-local-deps.sh  switch-to-remote-deps.sh  test-feature-matrix.sh
specmark/archive/: .readonly
specmark/archive/2026-07-13-vecboost-v0.2.0-ecosystem-refactor/: design.md  meta.json  proposal.md  tasks.md
specmark/archive/2026-07-13-vecboost-v0.2.0-ecosystem-refactor/specs/caching/: spec.md
specmark/changes/vecboost-v0.2.0-ecosystem-refactor/: tasks.md
src/: config.rs  error.rs  lib.rs  main.rs  utils.rs
src/api/: auth.rs  embedding.rs  init.rs  mod.rs  tests.rs
src/audit/: logger.rs  mod.rs  types.rs
src/audit/migrations/: 001_audit_logs.sql
src/auth/: csrf.rs  handlers.rs  jwt.rs  middleware.rs  mod.rs  token_store.rs  types.rs  user_store.rs
src/auth/migrations/: 001_users.sql
src/cache/: arc_cache.rs  bloom_filter.rs  entry.rs  kv_cache.rs  lfu_cache.rs  lru_cache.rs  mod.rs  oxcache_backend.rs  oxcache_stub.rs  tiered_cache.rs  trait_impl.rs
src/cli/: mod.rs
src/config/: app.rs  app_config.rs  mod.rs  model.rs  tests.rs
src/db/: mod.rs
src/device/: amd.rs  batch_scheduler.rs  cuda.rs  manager.rs  memory_limit.rs  memory_optimizer.rs  mod.rs
src/device/memory_pool/: buffer_pool.rs  config.rs  cuda_pool.rs  mod.rs  model_pool.rs  pool_manager.rs  tensor_pool.rs
src/domain/: mod.rs  openai_embedding.rs
src/engine/: candle_engine.rs  factory.rs  impl_.rs  mod.rs  onnx_engine.rs  openvino_engine.rs  tensorrt_engine.rs
src/grpc/: embedding_service.rs  mod.rs  server.rs
src/logger/: impl_.rs  mod.rs  tests.rs
src/metrics/: collector.rs  domain.rs  endpoint.rs  inference.rs  mod.rs  prometheus_exporter.rs
src/metrics/performance/: mod.rs
src/model/: config.rs  downloader.rs  loader.rs  manager.rs  mod.rs  recovery.rs
src/module_registry/: impl_.rs  mod.rs  tests.rs
src/monitor/: mod.rs
src/pipeline/: config.rs  handler.rs  mod.rs  priority.rs  queue.rs  response_channel.rs  scheduler.rs  worker.rs
src/rate_limit/: ip_whitelist.rs  limiter.rs  limiteron_adapter.rs  limiteron_stub.rs  mod.rs  redis_store.rs  store.rs  token_bucket.rs
src/routes/: embedding.rs  health.rs  impl_.rs  mod.rs  openai_embedding.rs
src/security/: encrypted_store.rs  helpers.rs  key_store.rs  mod.rs  salt.rs  sanitize.rs
src/service/: embedding.rs  mod.rs
src/text/: aggregator.rs  chunker.rs  domain.rs  mod.rs  tokenizer.rs
src/utils/: constants.rs  hash.rs  hf_hub.rs  mod.rs  ndarray_ops.rs  path_validator.rs  validator.rs  vector.rs
src/utils/resilience/: circuit_breaker.rs  mod.rs  retry.rs
src/utils/validator/: input.rs  mod.rs  path.rs
tests/: __init__.py  api_simulator.py  client_factory.py  config.py  conftest.py  fixtures.py  integration.rs  integration_test.rs  perf.rs  performance_test.rs  real_engine.rs  real_service.py  services.py  test_api.py  test_api_real.py  test_real_inference.rs
tests/common/: mod.rs
tests/integration/: api_test.rs  real_engine.rs
tests/perf/: api_simulator.py  client_factory.py  config.py  conftest.py  fixtures.py  real_service.py  services.py  test_api.py  test_server_integration.py
(+8 files in other folders)
