[package]
name = "vecboost"
version = "0.3.0"
edition = "2024"
authors = ["Kirky-X <kirky-x@outlook.com>"]
description = "High-performance embedding vector service written in Rust"
repository = "https://github.com/Kirky-X/vecboost"
documentation = "https://github.com/Kirky-X/vecboost"
homepage = "https://github.com/Kirky-X/vecboost"
license = "MIT"
keywords = ["embedding", "vector", "ml", "ai", "inference"]
categories = ["asynchronous", "science", "web-programming::http-server"]

[dependencies]
# Base async runtime & utilities (always required)
tokio = { version = "1", features = ["full"] }
async-trait = "0.1"
futures = "0.3"
tempfile = "3"
sys-info = "0.9"
num_cpus = "1"
lru = "0.12"
xxhash-rust = { version = "0.8", features = ["xxh3"] }
chrono = { version = "0.4", features = ["serde"] }
regex = "1"
home = "0.5"
sha2 = "0.10"
rand = "0.8"
hex = "0.4"
url = "2"
zeroize = "1"

# Serialization (base)
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Configuration (base)
config = "0.14"
toml = "0.8"

# Logging & Tracing (base)
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Error Handling (base)
thiserror = "2"
anyhow = "1"

# Module Registry (always required)
trait-kit = { version = "0.3", features = ["async"] }

# Configuration library (config feature)
confers = { version = "0.4", optional = true, default-features = false, features = ["toml", "env", "config-bus"] }

# Logging infrastructure (inklog feature)
inklog = { version = "0.1", optional = true, default-features = false }
log = { version = "0.4", optional = true, default-features = false }

# Cache infrastructure (oxcache feature)
oxcache = { version = "0.3", optional = true, default-features = false, features = ["core"] }

# Rate limiting infrastructure (limiteron feature)
limiteron = { version = "0.2", optional = true, default-features = false }

# Database infrastructure (db feature)
# dbnexus re-exports ConnectionTrait/TransactionTrait, but not DatabaseBackend/Statement/Value/DbErr.
# Direct sea-orm dependency is still required for those types.
dbnexus = { version = "0.4", optional = true, default-features = false, features = ["sqlite", "runtime-tokio-rustls", "macros", "permission", "cache"] }
sea-orm = { version = "2.0.0-rc.42", optional = true, default-features = false }

# AI & Math (base)
candle-core = { version = "0.11", features = [] }
candle-nn = "0.11"
candle-transformers = "0.11"
hf-hub = "0.3"

# Web Framework (http feature)
axum = { version = "0.7", optional = true, default-features = false, features = ["http1", "json", "tokio", "tracing", "macros", "matched-path", "original-uri", "query"] }
axum-extra = { version = "0.9", optional = true, default-features = false, features = ["typed-header"] }
tower-http = { version = "0.6", optional = true, default-features = false, features = ["trace", "cors", "add-extension", "validate-request", "set-header", "timeout"] }

# OpenAPI Documentation (http feature)
utoipa = { version = "5", optional = true, default-features = false, features = ["axum_extras", "chrono", "uuid"] }
utoipa-swagger-ui = { version = "8", optional = true, default-features = false, features = ["axum", "url"] }
uuid = { version = "1", optional = true, default-features = false, features = ["v4", "serde"] }

# Monitoring (http feature)
prometheus = { version = "0.13", optional = true, default-features = false, features = ["process"] }
axum-prometheus = { version = "0.7", optional = true, default-features = false }

# HTTP client (http feature)
reqwest = { version = "0.12", optional = true, default-features = false, features = ["stream", "charset", "http2", "default-tls"] }

# gRPC support (grpc feature)
tonic = { version = "0.12", optional = true, default-features = false, features = ["transport", "codegen", "prost"] }
prost = { version = "0.13", optional = true, default-features = false, features = ["std", "prost-derive"] }

# Auth feature
jsonwebtoken = { version = "10", optional = true, default-features = false, features = ["aws_lc_rs"] }
password-hash = { version = "0.5", optional = true, default-features = false, features = ["rand_core", "alloc"] }
argon2 = { version = "0.5", optional = true, default-features = false, features = ["alloc", "password-hash"] }
aes-gcm = { version = "0.10", optional = true, default-features = false, features = ["alloc", "aes", "getrandom", "rand_core"] }

# Redis feature
redis = { version = "1", optional = true, default-features = false, features = ["tokio-comp", "connection-manager"] }

# ONNX feature
ndarray = { version = "0.17", optional = true, default-features = false, features = ["std"] }
ort = { version = "2.0.0-rc.12", optional = true, default-features = false }

# CUDA feature (candle-core/cuda 传递依赖 cudarc 0.19,支持 CUDA 13)
# 注意:项目代码不直接使用 cudarc,无需在此声明

# Multi-protocol SDK framework (sdforge feature)
sdforge = { version = "0.4", optional = true, default-features = false }

# CLI argument parsing (cli feature)
clap = { version = "4", optional = true, default-features = false, features = ["derive", "std", "help", "usage", "error-context"] }

# Model Context Protocol server (mcp feature). sdforge's `mcp` feature
# depends on `rmcp ~2.1`; we declare the same version so Cargo unifies to a
# single `rmcp` crate shared with sdforge (its MCP binding is built on it).
rmcp = { version = "2.1", features = ["server", "transport-io"], optional = true }

[build-dependencies]
tonic-build = { version = "0.12", optional = true, default-features = false, features = ["transport", "prost"] }

[features]
default = ["http", "oxcache", "limiteron"]

# 协议特性
http = ["dep:axum", "dep:axum-extra", "dep:tower-http", "dep:utoipa", "dep:utoipa-swagger-ui", "dep:uuid", "dep:prometheus", "dep:axum-prometheus", "dep:reqwest", "sdforge/http"]
grpc = ["dep:tonic", "dep:prost", "dep:tonic-build"]
cli = ["sdforge/cli", "dep:clap"]
openapi = ["dep:utoipa", "dep:utoipa-swagger-ui"]
# MCP (Model Context Protocol) server over stdio, generated by sdforge's
# `#[forge(tool_name = ...)]` macros (which register tools into the inventory)
# and served via `sdforge::mcp::build()` on rmcp's stdio transport. Exposes
# VecBoost embedding tools (embed / embed_batch / similarity) to LLM clients.
# Run with: `vecboost --mcp`.
mcp = ["sdforge/mcp", "dep:rmcp"]

# 存储特性
db = ["dep:dbnexus", "dep:sea-orm"]
postgres = ["db", "dbnexus/postgres"]

# 基础设施特性(Phase 3 添加依赖)
inklog = ["dep:inklog", "dep:log"]
limiteron = ["dep:limiteron"]
oxcache = ["dep:oxcache"]

# 配置特性(Phase 3.2 confers 集成)
config = ["dep:confers"]

# 功能特性
auth = ["dep:jsonwebtoken", "dep:password-hash", "dep:argon2", "dep:aes-gcm"]
redis = ["dep:redis"]

# 引擎特性
cuda = ["candle-core/cuda", "candle-nn/cuda"]
metal = ["candle-core/metal", "candle-nn/metal"]
onnx = ["dep:ndarray", "dep:ort", "ort/ndarray", "ort/std", "ort/alternative-backend"]

# Platform-specific dependencies
[target.'cfg(target_os = "macos")'.dependencies]
tokenizers = { version = "0.15", features = ["http"] }

[target.'cfg(target_os = "linux")'.dependencies]

[target.'cfg(target_os = "windows")'.dependencies]

[dev-dependencies]
mockall = "0.15"
tower = { version = "0.5", features = ["util"] }
tokio = { version = "1", features = ["test-util", "macros", "rt-multi-thread"] }

[profile.dev]
opt-level = 1

# ─────────────────────────────────────────────────────────────────────────────
# Workspace — examples 作为独立 crate(member),不发布
# ─────────────────────────────────────────────────────────────────────────────
[workspace]
members = [".", "examples"]
resolver = "2"

[workspace.package]
license = "MIT"
edition = "2024"
authors = ["Kirky-X <kirky-x@outlook.com>"]
